# pico-ir-keyboard

./: CMakeLists.txt  README.md
src/: main.c  usb_descriptors.c
